# Game-of-Life

./: .gitignore  .proj-aliases.sh  CMakeLists.txt
inc/board/: state.h
inc/board/io/: printer.h
inc/board/logic/: controller.h
src/: main.cpp
src/board/: CMakeLists.txt  state.cpp
src/board/io/: printer.cpp
src/board/logic/: controller.cpp
test/board/: CMakeLists.txt  state_test.cpp
test/board/io/: printer_test.cpp
test/board/logic/: controller_test.cpp
